# mathematical-systems

./: pyproject.toml  requirements.txt
core/: __init__.py  coordinates.py  evaluator.py  export.py  parser.py
core/generators/: __init__.py  base.py  custom_equation.py  lissajous.py  polar_patterns.py
core/renderers/: static_renderer.py
docs/: architecture.md  mapping_schema.md
examples/: advanced_demo.py  example_01_spirograph.py  example_02_attractors.py  example_03_lissajous.py  example_04_polar.py  example_function.py  example_generators.py  simple_demo.py
geoviz/: LICENSE  install.sh  pyproject.toml  readme.md
geoviz/backend/: LICENSE  MANIFEST.in  pyproject.toml
geoviz/backend/geometry_visualizer/: __init__.py  primitives.py  transforms.py
geoviz/backend/geometry_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geoviz/backend/geometry_visualizer/algorithms/: delaunay.py
geoviz/backend/tests/: test_algorithms.py  test_primitives.py
geoviz/docs/: api.md  architecture.md
geoviz/examples/convex_hull_demo/: convex_hull_scene.json  demo.py
geoviz/frontend/: index.html  package-lock.json  package.json  vite.config.ts
geoviz/frontend/src/: App.tsx
geoviz/frontend/src/components/: ControlPanel.tsx  SceneObjects.tsx  SceneViewer.tsx
geoviz/frontend/src/controllers/: SceneController.ts
geoviz/frontend/src/types/: scene.ts
geoviz/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1399deed3cfff95d___init___py.html  z_1399deed3cfff95d_io_py.html  z_1399deed3cfff95d_primitives_py.html  z_1399deed3cfff95d_scene_py.html  z_1399deed3cfff95d_transforms_py.html  z_1399deed3cfff95d_utils_py.html  z_8642524b40331c64___init___py.html  z_8642524b40331c64_boolean_ops_py.html  z_8642524b40331c64_convex_hull_py.html  z_8642524b40331c64_delaunay_py.html  z_8642524b40331c64_voronoi_py.html
geoviz/specs/: scene.schema.json
math-art/: README.md  pyproject.toml  quickstart.py
math-art/core/: color_maps.py  utils.py
math-art/core/generators/: attractors.py  spirograph.py
math-art/core/renderers/: __init__.py  animation_renderer.py  vector_renderer.py
math-art/docs/: api_reference.md  function_catalog.md
math-art/examples/: example_05_custom.py  run_all_examples.py
math-art/math_art_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
math-art/tests/: test_core.py
music-math-engine/: README.md  example_function_metadata.json
music-math-engine/docs/: api_reference.md  design_spec.md  math_reference.md
music-math-engine/src/math_music_engine.egg-info/: entry_points.txt  requires.txt
music-math-engine/src/math_music_engine/core/: composition.py  mapping_engine.py  synthesis.py
music-math-engine/src/math_music_engine/generators/: fibonacci_rhythm.py  fourier_synth.py  fractal_melody.py  random_walk.py
music-math-engine/src/math_music_engine/interfaces/: __init__.py
music-math-engine/src/math_music_engine/parser/: __init__.py  expression_parser.py
music-math-engine/src/math_music_engine/visualization/: __init__.py  mapping_viz.py  surface_plot.py  waveform_plot.py
music-math-engine/tests/: test_parser.py
num-integrator-py/: CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
num-integrator-py/examples/: benchmark.py  differentiation_demo.ipynb  integration_demo.ipynb  ode_demo.ipynb
num-integrator-py/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0d585e5d51fc1434___init___py.html  z_0d585e5d51fc1434_analysis_py.html  z_0d585e5d51fc1434_api_py.html  z_0d585e5d51fc1434_differentiators_py.html  z_0d585e5d51fc1434_errors_py.html  z_0d585e5d51fc1434_integrators_py.html  z_0d585e5d51fc1434_ode_solvers_py.html  z_0d585e5d51fc1434_utils_py.html
num-integrator-py/numeric_integrator/: __init__.py  analysis.py  api.py  differentiators.py  errors.py  integrators.py  ode_solvers.py  utils.py
num-integrator-py/numeric_integrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
num-integrator-py/tests/: __init__.py  test_analysis.py  test_api.py  test_differentiators.py  test_integrators.py  test_ode_solvers.py  test_utils.py
src/math_music_engine/: __init__.py
src/math_music_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/math_music_engine/core/: __init__.py  function_engine.py  output_manager.py
src/math_music_engine/generators/: __init__.py  chaos_modulator.py  prime_sequence.py
src/math_music_engine/interfaces/: cli.py
src/math_music_engine/visualization/: spectrogram.py
sympy-lite/: LICENSE  PROJECT_SUMMARY.md  README.md  demo.py  pyproject.toml  requirements.txt  usage.md
sympy-lite/examples/: differentiation_demo.ipynb  integration_demo.ipynb  simplification_demo.ipynb
sympy-lite/symbolic/: __init__.py  ast.py  differentiate.py  errors.py  integrate.py  parser.py  printer.py  simplify.py
sympy-lite/tests/: __init__.py  test_differentiate.py  test_evaluate.py  test_integrate.py  test_parser.py  test_printer.py  test_simplify.py
tensoranalysis-studio/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  verify_installation.py
tensoranalysis-studio/examples/: complete_tutorial.ipynb  general_relativity_basics.py  quickstart.md
tensoranalysis-studio/tas/: __init__.py
tensoranalysis-studio/tas/core/: __init__.py  algebra.py  connections.py  coords.py  diffops.py  einsum_parser.py  indices.py  metrics.py  numeric_backends.py  tensor.py  utils.py
tensoranalysis-studio/tas/sym/: __init__.py
tensoranalysis-studio/tas/viz/: __init__.py  field_plot.py  tensor_flow.py
tensoranalysis-studio/tensor_analysis_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tensoranalysis-studio/tests/: test_einsum.py  test_metrics.py  test_tensor.py
tests/: conftest.py  test_generators.py  test_mapping.py  test_output.py  test_synthesis.py
