[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]
exclude = ["tests*", "docs*", "examples*", "output*"]

[project]
name = "math-art-generator"
version = "0.1.0"
description = "High-performance procedural art generation using mathematical equations"
authors = [{name = "Math Art Team"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["art", "mathematics", "procedural-generation", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "sympy>=1.12",
    "numba>=0.58.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "noise>=1.2.2",
    "moviepy>=1.0.3",
    "jsonschema>=4.17.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=core --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
