[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numeric-integrator"
version = "0.1.0"
description = "modular numerical integration and differential equation solver library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "numeric integrator contributors"}
]
keywords = ["numerical integration", "ode solver", "scientific computing", "numerical methods"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["numeric_integrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=numeric_integrator --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["numeric_integrator"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
precision = 2
fail_under = 90
